--- a/DataServices/Web.config
+++ b/DataServices/Web.config
@@ -9,71 +9,30 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.serviceModel>
-  
-    
+
+    <bindings>
+      <basicHttpBinding>
+        <binding  name="BasicBindingMtom" messageEncoding="Mtom" />
+      </basicHttpBinding>
+    </bindings>
     <services>
-      <service name="DataServices.EmployeeMgmtService" behaviorConfiguration="Default">
-        <host>
-          <baseAddresses>
-            <add baseAddress="http://localhost:2068/EmployeeMgmtService.svc"/>
-            <!--<add baseAddress="net.tcp://localhost:9002/EmployeeMgmtService"/>-->
-          </baseAddresses>
-        </host>
-        <endpoint address="" binding="webHttpBinding" contract="DataServices.IEmployeeMgmtService" behaviorConfiguration="web"/>
-        <!--<endpoint address="net.tcp://localhost:9002/EmployeeMgmtService" binding="netTcpBinding" contract="DataServices.IEmployeeMgmtService"/>-->
-        <!--<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
-        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>-->
+      <service name="DataServices.EmployeeMgmtService">
+        <endpoint address="mtom" binding="basicHttpBinding"  bindingConfiguration="BasicBindingMtom" contract="DataServices.IEmployeeMgmtService" />
       </service>
-
-      <service name="DataServices.Employee" behaviorConfiguration="EmployeeBehaviour">
-        <host>
-          <baseAddresses>
-            <add baseAddress="http://localhost:8080/EmployeeMgmtService/Employee"/>
-            <!--<add baseAddress="net.tcp://localhost:9002/EmployeeMgmtService"/>-->
-          </baseAddresses>
-        </host>
-        <endpoint address="" binding="webHttpBinding" contract="Domain.Interfaces.IEmployee" behaviorConfiguration="web"/>
-        <!--<endpoint address="net.tcp://localhost:9002/EmployeeMgmtService" binding="netTcpBinding" contract="DataServices.IEmployeeMgmtService"/>-->
-        <!--<endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange"/>
-        <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange"/>-->
-      </service>
-      
     </services>
-
-
-    
     <behaviors>
       <serviceBehaviors>
-        <behavior name="EmployeeBehaviour">
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="true" />
+        <behavior>
+          <serviceMetadata httpGetEnabled="true"/>
         </behavior>
-
-        <behavior name="Default">
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="true" />
-        </behavior>
-        
       </serviceBehaviors>
-      <endpointBehaviors>
-        <behavior name="web">
-          <webHttp/>
-        </behavior>
-      </endpointBehaviors>
     </behaviors>
     
-    
-    <!--<behaviors>
-      <serviceBehaviors>
-        <behavior>
-          --><!-- To avoid disclosing metadata information, set the values below to false before deployment --><!--
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
-          --><!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information --><!--
-          <serviceDebug includeExceptionDetailInFaults="false"/>
-        </behavior>
-      </serviceBehaviors>
-    </behaviors>-->
     <protocolMapping>
+      <add scheme="http" binding="basicHttpBinding" bindingConfiguration="" />
+      <add scheme="net.tcp" binding="netTcpBinding" bindingConfiguration="" />
+      <add scheme="net.pipe" binding="netNamedPipeBinding" bindingConfiguration="" />
+      <add scheme="net.msmq" binding="netMsmqBinding" bindingConfiguration="" />
         <add binding="webHttpBinding" scheme="https" />
     </protocolMapping>    
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
