--- a/EmployeemanagementApp/EmployeemanagementApp.csproj
+++ b/EmployeemanagementApp/EmployeemanagementApp.csproj
@@ -195,7 +195,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service References\EmpServiceRef\Reference.cs">
+    <Compile Include="Service References\ServiceReference1\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -273,13 +273,13 @@
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Service References\EmpServiceRef\EmployeeMgmtService.disco" />
-    <Content Include="Service References\EmpServiceRef\configuration91.svcinfo" />
-    <Content Include="Service References\EmpServiceRef\configuration.svcinfo" />
-    <Content Include="Service References\EmpServiceRef\Reference.svcmap">
+    <None Include="Service References\ServiceReference1\EmployeeMgmtService.disco" />
+    <None Include="Service References\ServiceReference1\configuration91.svcinfo" />
+    <None Include="Service References\ServiceReference1\configuration.svcinfo" />
+    <None Include="Service References\ServiceReference1\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
-    </Content>
+    </None>
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -319,17 +319,20 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
-    <Content Include="Service References\EmpServiceRef\EmployeeMgmtService.wsdl" />
-    <None Include="Service References\EmpServiceRef\EmployeeMgmtService.xsd">
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Service References\EmpServiceRef\EmployeeMgmtService1.xsd">
-      <SubType>Designer</SubType>
-    </None>
     <Content Include="Views\Employee\Index.cshtml" />
     <Content Include="Views\Employee\Details.cshtml" />
     <Content Include="Views\Employee\Edit.cshtml" />
     <Content Include="Views\Department\Index.cshtml" />
+    <None Include="Service References\ServiceReference1\EmployeeMgmtService.wsdl" />
+    <None Include="Service References\ServiceReference1\EmployeeMgmtService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReference1\EmployeeMgmtService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\ServiceReference1\EmployeeMgmtService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -341,13 +344,13 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Service References\EmpServiceRef\" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Domain.Interfaces\Domain.Interfaces.csproj">
       <Project>{64bc22cd-2530-406b-95ff-897ea3387f36}</Project>
       <Name>Domain.Interfaces</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\ServiceReference1\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
